# NavigationMesh

./: .gitignore
NavigationMesh/: CMakeLists.txt  config.h.in
NavigationMesh/resources/: LevelTri.tmx
NavigationMesh/src/: .Game.h.swp  .NavigateToMouse.cpp.swp  Flee.cpp  FollowMouse.cpp  FollowMouse.h  Game.cpp  GameObject.cpp  GameObject.h  NavMesh.cpp  NavigateToMouse.h  Player.cpp  QuadTree.cpp  QuadTree.h  ResourceHolder.hpp  ResourceIdentifiers.hpp  ResourcePath.cpp  ResourcePath.hpp  ShadowManager.cpp  ShadowManager.h  main.cpp  tags
resources/: TestLevel.tmx
src/: AIState.h  CollisionHelpers.cpp  CollisionHelpers.h  Flee.cpp  Flee.h  FollowMouse.cpp  FollowMouse.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GlobalConstants.hpp  Kinematic.h  NavMesh.cpp  NavMesh.h  NavigateToMouse.cpp  NavigateToMouse.h  Player.cpp  Player.h  QuadTree.cpp  QuadTree.h  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  ResourcePath.cpp  ResourcePath.hpp  ShadowManager.cpp  ShadowManager.h  Utilities.cpp  Utilities.h  main.cpp  tinyxml2.cpp  tinyxml2.h
